added aromactics page

--- a/index.qmd
+++ b/index.qmd
@@ -50,13 +50,13 @@ format:
 
 <p class="hero-banner-date">
 
-16.04.2025
+23.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Цена на нефть Urals рухнула до 2-летнего минимума
+Цены на российскую нефть перешли к росту
 
 </p>
 :::
@@ -70,13 +70,13 @@ format:
 
 <p class="hero-banner-date">
 
-16.04.2025
+23.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Геополитика сужает дисконты на дизель
+Бензиновый рынок готов к весеннему вызову
 
 </p>
 :::
@@ -110,13 +110,13 @@ format:
 
 <p class="hero-banner-date">
 
-14.04.2025
+28.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Неопределенность на рынке растет
+Праздники в Китае немного оживили рынок 
 
 </p>
 :::
@@ -163,6 +163,27 @@ format:
 ::::
 
 :::: hero-banner
+![](images/icon-chemicals.svg)
+
+::: hero-banner-content
+[Ароматика](markets/markets-aromatics.qmd){.hero-banner-title}
+
+<p class="hero-banner-date">
+
+25.04.2025
+
+</p>
+
+<p class="hero-banner-caption">
+
+Цены на бензол больше не могут удержаться
+
+</p>
+:::
+::::
+
+
+:::: hero-banner
 ![](images/icon-wheat.svg)
 
 ::: hero-banner-content
@@ -170,13 +191,13 @@ format:
 
 <p class="hero-banner-date">
 
-21.04.2025
+28.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Пакистан будет нуждаться в импортной пшенице в 2025/26 г.
+Индия запаслась пшеницей, Китай – уронил импорт
 
 </p>
 :::
@@ -276,7 +297,8 @@ format:
 
 <p class="hero-banner-caption">
 
-Низкие цены на нефть сократили экспорт российской нефти
+Конкуренция за перевозку нефти восстановила российский экспорт
+
 
 </p>
 :::
@@ -290,13 +312,13 @@ format:
 
 <p class="hero-banner-date">
 
-15.04.2025
+22.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Падение цены на нефть РФ привело к снижению фрахта нефтепродуктов
+Российские нефтепродукты нашли новые маршруты
 
 </p>
 :::
@@ -364,9 +386,11 @@ format:
 :::::::::::::::::::::::::::::::::::
 ::::::::::::::::::::::::::::::::::::
 
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+::: {.g-col-12}
 ### Актуальное
+:::
 
+::: {.g-col-6}
 15 апреля 2025. **ЦЦИ начал публиковать индексы на хопперы-зерновозы**
 
 [Пресс-релиз →](events/2025-04-15-railways-wheat-van.qmd)
@@ -382,7 +406,9 @@ format:
 5 марта 2025. Сырьевой индекс ЦЦИ. **Экспортные цены вернулись на исходную**
 
 [Мониторинг февраль -\>](reports/2025-02%20Сырьевой%20индекс%20ЦЦИ.pdf)
+:::
 
+::: {.g-col-6}
 7 февраля 2025. **Пятница с ЦЦИ: логистика**
 
 [Материалы →](events/2025-02-07-logistics.qmd)
@@ -400,11 +426,7 @@ format:
 [Пресс-релиз →](events/2025-01-30-Macro-consensus.qmd)
 :::
 
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-![](images/ЦЦИ_pattern_color.svg){width="80%"}
-:::
-
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+::: {.g-col-12}
 ### Сырьевой индекс ЦЦИ [→](pbc-index.qmd)
 
 -- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
