--- a/markets/freight-crude.qmd
+++ b/markets/freight-crude.qmd
@@ -17,16 +17,25 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*22.04.2025 Морская логистика. Нефть*
+
+**Конкуренция за перевозку нефти восстановила российский экспорт**
+
+Увеличение доступного для перевозок российской нефти флота за счет возвращения западных судовладельцев на российский рынок привело к профициту тоннажа на рынке. В условиях роста конкуренции ставки на перевозку снижались.
+
+Ставки фрахта Aframax из Балтики до Индии упали на 8,4% н/н, а из Козьмино до Китая – почти на треть. Российские экспортеры воспользовались продолжающимся падением ставок фрахта и увеличили экспорт нефти на 22% н/н.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *15.04.2025 Морская логистика. Нефть*
 
 **Низкие цены на нефть сократили экспорт российской нефти**
 
-Ставки фрахта на Suezmax из Новороссийска до Индии и Китая продолжают падение на 7,1% и 5,4% н/н соответственно из-за  снижения экспорта российской нефти и отсутствия майских заказов на перевозку казахской нефти, несмотря на частичное возобновление работы причалов Каспийского трубопроводного консорциума в Новороссийске.
+Ставки фрахта на Suezmax из Новороссийска до Индии и Китая продолжают падение на 7,1% и 5,4% н/н соответственно из-за снижения экспорта российской нефти и отсутствия майских заказов на перевозку казахской нефти, несмотря на частичное возобновление работы причалов Каспийского трубопроводного консорциума в Новороссийске.
 
 Снижение цен на российскую нефть заставило трейдеров придержать экспортные объемы нефти, что привело к снижению экспорта российской нефти на 15,2% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *08.04.2025 Морская логистика. Нефть*
 
@@ -37,7 +46,6 @@ format:
 Остановка деятельности причала в порту Новороссийск не повлияла на экспорт российской нефти. Перевалка в российских портов снизилась на 2,3% н/н из-за отсутствия отгрузок в Мурманске и Пригородном (Сахалинская область).
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
