--- a/markets/freight-products.qmd
+++ b/markets/freight-products.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*22.04.2025 Морская логистика. Нефтепродукты*
+
+**Российские нефтепродукты нашли новые маршруты**
+
+Ставки на перевозку светлых нефтепродуктов снизились по всем маршрутам из портов Балтики. Стоимость фрахта из портов Черного моря увеличилась по всем направлениям за исключением Западной Африки (-0,8 долл./т н/н).
+
+Профицит свободного тоннажа обусловил падение стоимости фрахта темных нефтепродуктов танкерами грузоподъемностью 100 тыс. т на 1 долл./т н/н по всем направлениям.
+
+Зафиксирована первая поставка российского автомобильного бензина в США в 2025 г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *15.04.2025 Морская логистика. Нефтепродукты*
 
 **Падение цены на нефть РФ привело к снижению фрахта нефтепродуктов**
@@ -27,7 +39,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-
 *08.04.2025 Морская логистика. Нефтепродукты*
 
 **На рынок перевозок нефтепродуктов опустился штиль**
@@ -37,7 +48,6 @@ format:
 В Черном ставки фрахта на темные нефтепродукты сохранили прежний уровень, в то время как на Балтике наблюдалось незначительное снижение - на 1% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
