--- a/markets/markets-chemicals.qmd
+++ b/markets/markets-chemicals.qmd
@@ -15,14 +15,29 @@ format:
 
 ::::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Котировки
+
+*04.2025 Каустическая сода*
+
+**Апрель «подсушивает» рынок**
+
+Несмотря на нивелирование последствий февральского дефицита, предложение на внутреннем рынке каустической соды остаётся сдержанным.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *04.2025 Метанол*
 
 **Рынок метанола вступает в летний сезон**
 
 Индекс цен российских производителей метанола остался в апреле без изменений.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*03.2025 Каустическая сода*
+
+**Март корректирует февральский всплеск цен**
+
+ООО «РусВинил» возобновило производство каустической соды.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -34,6 +49,15 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
+*02.2025 Каустическая сода*
+
+**Паника сменится стабильностью**
+
+Цены на каустическую соду в феврале выросли в среднем на 9%.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *02.2025 Метанол*
 
 **Мировые цены на метанол уже охлаждаются, но не в России**
@@ -41,7 +65,6 @@ format:
 За январь спотовые цены на метанол в Европе снизились на 18%, в США – на 4%.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
