--- a/markets/markets-oil-products.qmd
+++ b/markets/markets-oil-products.qmd
@@ -16,6 +16,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*23.04.2025 Бензин*
+
+**Бензиновый рынок готов к весеннему вызову**
+
+Запасов автомобильного бензина достаточно для нивелирования рисков топливного дефицита на внутреннем рынке. 
+
+Египет стал ключевым направлением морских поставок российского бензина в первом квартале 2025 г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *16.04.2025 Дизель*
 
 **Геополитика сужает дисконты на дизель**
@@ -36,15 +46,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*02.04.2025 Дизель*
-
-**Крепкий рубль и посевная снижают экспорт дизеля**
-
-Укрепление рубля и рост внутреннего спроса привели к очередному падению экспорта дизеля в марте.
-
-Дисконты на прошлой неделе показали разнонаправленную динамику. Дифференциал FOB Baltic расширился почти на 20 долл./т, а FOB Black Sea сузился на 11 долл./т.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
