--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,6 +16,15 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*23.04.2025 Нефть*
+
+**Цены на российскую нефть перешли к росту**
+
+На прошлой неделе введение ограничений США против нефтяных поставок иранской нефти и китайского НПЗ взбодрило нефтяной рынок и привело к росту мировых цен на нефть. По итогам недели средняя стоимость dated Brent выросла на 2 долл./барр. н/н и превысила отметку в 67 долл./барр. 
+
+Снижение фрахтовых ставок на перевозку российской нефти способствовало увеличению экспорта нефти Urals примерно на треть, а также сужению дисконта на нее почти на 1 долл./барр. н/н. Дисконт на ESPO откорректировался в сторону расширения примерно на 0,6 долл./барр. н/н после сужения неделей ранее на 1,4 долл./барр. н/н.
+
+
 *16.04.2025 Нефть*
 
 **Цена на нефть Urals рухнула до 2-летнего минимума**
@@ -38,17 +47,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*02.04.2025 Нефть*
-
-**Тарифная политика США будоражит нефтяной рынок**
-
-Планы по введению новых импортных пошлин против всех стран, а также дополнительных пошлин против стран, закупающих российскую нефть, подтолкнули мировые цены на нефть к резкому росту. Стоимость dated Brent выросла на 2,1 долл./барр. н/н.
-
-Дисконты на российскую нефть незначительно сузились, а цена на нефть Urals выросла вслед за ценами на эталонные сорта на \~4% н/н и превысила отметку в 61 долл./барр.
-
-Технические работы в терминале Козьмино и уход на ремонты китайских НПЗ привели к обвалу экспорта нефти ESPO, что частично удалось компенсировать отгрузками нефти Urals. Общий экспорт российской нефти упал на 6,5% н/н.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
