--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,18 +17,30 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*28.04.2025 Пшеница*
+
+**Индия запаслась пшеницей, Китай – уронил импорт**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели.
+
+Китай планирует производить 753 млн т зерна в 2034 г. 
+
+Запасы пшеницы в Индии на трехлетнем максимуме  - 11,8 млн т. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *21.04.2025 Пшеница*
 
 **Пакистан будет нуждаться в импортной пшенице в 2025/26 г.**
 
 Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей.
 
-По прогнозам USDA Пакистан может снизить производство пшеницы в 2025/26 г. на 4 млн т до 27,5 млн т. 
+По прогнозам USDA Пакистан может снизить производство пшеницы в 2025/26 г. на 4 млн т до 27,5 млн т.
 
-Канада снизила экспорт пшеницы в Китай в 2024/25 г. (по данным на конец февраля 2025 г.) в 3,5 раза до 571 тыс. т. 
+Канада снизила экспорт пшеницы в Китай в 2024/25 г. (по данным на конец февраля 2025 г.) в 3,5 раза до 571 тыс. т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *14.04.2025 Пшеница*
 
@@ -75,18 +87,6 @@ format:
 Турция сняла ограничения на импорт пшеницы для мукомолов.
 
 Для Казахстана введен временный запрет на экспорт (кроме транзита) пшеницы, чечевицы и семян масличного льна в Россию.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*17.03.2025 Пшеница*
-
-**ЕС снижает ожидания по урожаю пшеницы в 2025 г.**
-
-Экспортные цены на пшеницу остались на уровне прошлой недели.
-
-В мартовском прогнозе COCERAL производство пшеницы в ЕС-27 в 2025 г. снижено на 2 млн т до 124,4 млн т.
-
-USDA снизило прогноз китайского импорта пшеницы в 2024/25 г. на 1,5 млн т до 6,5 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
