--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -117,11 +117,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [-5,9 п.]{.my-custom-class style="color:#f6514c;"}** ([**-4,9 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [+1,5 п.]{.my-custom-class style="color:#44bf78;"}** ([**-4,1 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефтm [**-14%**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-13%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: нефтm [**+4,4%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**+4,1%**]{.my-custom-class style="color:#44bf78;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**-4,3 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-1,1 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**-2,1 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
